// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the NameAndFundingSourceReview component renders correctly when expanding is disabled 1`] = `
<div
  className="ds-u-padding-y--1 activity--body activity--body__collapsed activity--body__notfirst"
>
  <Review
    ariaLabel={null}
    editHref={null}
    heading={
      <React.Fragment>
        3
        . 
        Getting out of jail
         
         
        | 
        Rich Uncle Pennybags
      </React.Fragment>
    }
    headingLevel="4"
    objType="Funding Source"
    onDeleteClick={null}
    onDeleteLabel={null}
    onEditClick={null}
    skipConfirmation={false}
    title={null}
  />
</div>
`;

exports[`the NameAndFundingSourceReview component renders correctly when expanding is enabled 1`] = `
<div
  className="ds-u-padding-y--1 activity--body activity--body__collapsed activity--body__notfirst"
>
  <Review
    ariaLabel={null}
    editHref={null}
    heading={
      <React.Fragment>
        3
        . 
        Getting out of jail
         
         
        | 
        Rich Uncle Pennybags
      </React.Fragment>
    }
    headingLevel="4"
    objType="Funding Source"
    onDeleteClick={null}
    onDeleteLabel={null}
    onEditClick={[MockFunction]}
    skipConfirmation={false}
    title={null}
  />
</div>
`;
